--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -58,30 +58,17 @@
   padding: 10px 0;
 }
 
-@media screen and (max-width: 925px) {
-  .hamburger {
-    display: block;
-  }
 
-  .nav-links {
-    display: none;
-  }
-
-  .open {
-    display: flex;
-  }
-}
  
 @media screen and (max-width: 925px) {
+  .navbar{
+    display: none;
+  }
   .hamburger {
     display: block;
   }
 
-  .nav-links {
-    display: none;
-  }
-
-  .open {
-    display: flex;
+  .logo{
+    display: block;
   }
 }
