--- a/src/assets/footer.css
+++ b/src/assets/footer.css
@@ -27,3 +27,10 @@ p {
   font-size: 1.2rem;
   text-decoration: none;
 }
+
+
+@media screen and (max-width: 925px) {
+  .footer{
+    display: none;
+  }
+}
