--- a/src/assets/gallerie.css
+++ b/src/assets/gallerie.css
@@ -29,3 +29,11 @@
   color: #000; 
   padding: 10px; 
 }
+
+
+@media screen and (max-width: 925px) {
+ .image-grid {
+        display: flex;
+        flex-direction: column;
+    }
+}
